# coding-edit-intel-agent

./: .gitignore  Architecture and Implementation Plan.docx  Dockerfile  GEMINI.md  Makefile  README.md  agents-cli-manifest.yaml  claimguard_architecture_design.md  dataset_importer.py  deployment_metadata.json  implementation_plan.md  pyproject.toml  test_report.md  walkthrough.md
.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
.github/workflows/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
app/: agent.py  config.py  fast_api_app.py  models.py  retrievers.py
app/app_utils/: telemetry.py  typing.py
app/db/: claims_registry-Vivikta.db  claims_registry.db  connection.py  iam_proxy-Vivikta.db  iam_proxy.db  init_db.py  ontologies.db  provider_profiles.db
app/services/: adjudication_service.py  iam_service.py  log_service.py  pattern_service.py  rule_service.py  snomed_service.py
app/static/: index.html
data/: synthetic_payer_rcm_coding_edit_intelligence_dataset_Ver1.0.csv.xlsx
data_ingestion/: README.md  pyproject.toml
data_ingestion/data_ingestion_pipeline/: pipeline.py  submit_pipeline.py
data_ingestion/data_ingestion_pipeline/components/: ingest_data.py  process_data.py
deployment/terraform/cicd/: backend.tf  github.tf  iam.tf  outputs.tf  service.tf  storage.tf  variables.tf
deployment/terraform/scripts/: delete_vector_search_collection.py  setup_vector_search_collection.py
deployment/terraform/single-project/: apis.tf  backend.tf  datastore_outputs.tf  (+5 more)
tests/integration/: test_agent.py  test_agent_runtime_app.py
(+3 files in other folders)
