[project]
name = "data-ingestion-pipeline"
version = "0.1.0"
description = "Data ingestion pipeline for RAG retriever"
readme = "README.md"
requires-python = ">=3.11, <=3.13"
dependencies = [
    "backoff>=2.2.0",
    "bigframes>=2.0.0",
    "docker>=7.0.0",
    "google-cloud-aiplatform>=1.80.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-pipeline-components>=2.19.0",
    "google-cloud-vectorsearch>=0.4.0",
    "kfp>=1.4.0",
    "langchain-text-splitters>=0.3.0",
    "markdownify>=0.14.0",
    "pandas<3",
    "swifter>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_ingestion_pipeline"]